[project]
name = "dharahil"
version = "0.1.1"
description = "DharaHIL Python SDK and tool execution interceptor"
authors = [{ name = "DharaHIL", email = "dev@dharahil.local" }]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

